# catalogic

./: .env.example  .gitignore  ABOUT.md  LICENSE  README.md  pyproject.toml
migrations/: README.md
migrations/versions/: 001_initial.sql  002_scan_state.sql  003_scan_control.sql  004_worker_heartbeat.sql  005_scan_mode_metrics.sql  006_scan_current_file.sql  007_app_settings.sql
scripts/: install_step1.sh
scripts/systemd/: catalogic-backend.service  catalogic-frontend.service  catalogic-scanner.service
src/catalogic/: __init__.py  cli.py  config.py  logging_setup.py  server.py
src/catalogic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/catalogic/agent/: __init__.py  runner.py
src/catalogic/api/: __init__.py  app.py  request_context.py
src/catalogic/app/: __init__.py  catalog.py  scan.py  scanner_service.py  scanner_worker.py  search.py
src/catalogic/core/: __init__.py  entities.py  exceptions.py
src/catalogic/frontend/: __init__.py  server.py
src/catalogic/scanner/: __init__.py  hash_util.py  image_meta.py  metadata.py  mime_magic.py  report_format.py  video_audio_meta.py  walker.py
src/catalogic/storage/: __init__.py  connection.py  migrations.py
src/catalogic/web/: index.html
tests/: conftest.py
tests/integration/: test_api.py  test_scan_search.py
tests/unit/: test_cli.py
tests/unit/app/: __init__.py  test_scan.py  test_scanner_services.py
tests/unit/core/: __init__.py
tests/unit/scanner/: __init__.py  test_hash_util.py  test_metadata.py  test_scan.py  test_walker.py
tests/unit/storage/: __init__.py  (+1 more)
(+7 files in other folders)
